docs(tags): document api
